# coq-domains

./: .gitignore  CoqMakefile.conf  Dcpo.v  DcpoExponential.v  Domains.ClosedModality.html  Domains.Dcpo.html  Domains.DcpoExponential.html  Domains.DcpoProduct.html  Domains.ILift.html  Domains.Kleene.html  Domains.Lift.html  Domains.Path.html  Domains.Poset.html  Domains.Preamble.html  Domains.Preorder.html  Domains.Sierpinski.html  Domains.Skeleton.html  Domains.UNat.html  Domains.WF.html  Makefile  Makefile.coq  Makefile.coq.conf  Path.v  Poset.v  Preorder.v  Sierpinski.v  _CoqProject  coq-domains.opam  indexpage.html  toc.html
.github/workflows/: build.yml  deploy.yml
docs/: Domains.ClosedModality.html  Domains.Dcpo.html  Domains.DcpoExponential.html  Domains.DcpoProduct.html  Domains.Kleene.html  Domains.Lift.html  Domains.OrderSpace.html  Domains.Path.html  Domains.Poset.html  Domains.Preamble.html  Domains.Preorder.html  Domains.Sierpinski.html  coqdoc.css  coqdocjs.js  index.html  indexpage.html  toc.html
docs/html/: Domains.Poset.html  toc.html
extra/: index.html
extra/resources/: coqdoc.css
html/: Domains.Dcpo.html  Domains.Path.html
theories/: Category.v  Category.v.hb  ClosedModality.v  Dcpo.v  DcpoExponential.v  DcpoProduct.v  Embedding.v  FilteredPoset.v  Functor.v  ILift.v  Kleene.v  Lift.v  OrderSpace.v  Path.v  Poset.v  Preamble.v  Preorder.v  Sierpinski.v  Skeleton.v  Subdomain.v  UNat.v  WF.v
